# 3DModelViewerQT

./: .gitignore  CMakeLists.txt  README.md
3DModelViewerQT/: CMakeLists.txt
3DModelViewerQT/app/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
3DModelViewerQT/engine/: Camera.cpp  Camera.h  Line.cpp  Line.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  SceneManager.cpp  SceneManager.h  Shape.cpp  Shape.h
3DModelViewerQT/math/: Plane.h  Ray.h  Triangle.h
3DModelViewerQT/shaders/: fshaderColor.glsl  fshaderTexture.glsl  shaders.qrc
3DModelViewerQT/textures/: textures.qrc
